<resources>
    <string name="app_name">NiubilityVideoPlayer</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_open">打开</string>
    <string name="home_title">首页</string>
    <string name="blog_title">我的博客</string>
    <string name="about_title">关于NiubilityVideoPlayer</string>
    <string name="version_number">Version 2.0</string>
    <string name="app_introduce_help">应用介绍与帮助</string>
    <string name="app_description">1、聚合海量视频，视频源来源于搜狐，乐视等主流视频网站的丰富视频内容，最新院线大片，热播剧随时看。\n
2、基于ijkplayer,解码支持RMVB,MKV,WMA，MP4等主流音视频格式，达到万能播放的体验。\n
3、收藏影视剧、播放历史，一个不缺。\n
   4、直播高清央视及卫视节目。\n</string>

    <string name="a_name">三生三世十里桃花</string>
    <string name="b_name">那片星空那片海</string>
    <string name="c_name">大秦帝国之崛起</string>
    <string name="d_name">射雕英雄传</string>
    <string name="e_name">中国式相亲之奶茶大叔遭疯抢</string>
    <string name="channel_series">电视剧</string>
    <string name="channel_movie">电影</string>
    <string name="channel_comic">动漫</string>
    <string name="channel_documentary">纪录片</string>
    <string name="channel_music">音乐</string>
    <string name="channel_variety">综艺</string>
    <string name="channel_live">直播</string>
    <string name="channel_favorite">收藏</string>
    <string name="channel_history">历史记录</string>
    <string name="site_letv">乐视视频</string>
    <string name="site_sohu">搜狐视频</string>

    <string name="data_failed_tip">数据加载失败,请检查网络!</string>
    <string name="load_more_text">正在加载新数据...</string>
    <string name="no_date_text">暂时没有数据...</string>

    <string name="director">导演：</string>
    <string name="mainactor">主演：</string>
    <string name="btn_phone_super">超清\n播放</string>
    <string name="btn_phone_normal">标清\n播放</string>
    <string name="btn_phone_high">高清\n播放</string>
    <string name="favor_selected">已收藏</string>
    <string name="favor_normal">收藏</string>
    <string name="stream_super">超清</string>
    <string name="stream_normal">标清</string>
    <string name="stream_high">高清</string>
    <string name="live_title">电视节目直播</string>
    <string name="favorite_title">我的收藏</string>
    <string name="action_delete">删除</string>
    <string name="favorite_empty">收藏夹空空如也,快去收藏吧!</string>
    <string name="favorite_dialog_message">确定删除?</string>
    <string name="favorite_dialog_sure">确定</string>
    <string name="favorite_dialog_quit">取消</string>
    <string name="history_title">播放历史</string>
    <string name="history_empty">暂无播放历史!</string>
    <string name="video">视频</string>
    <string name="MyBlog">我的博客</string>
    <string name="supervideo">关于NiubilityVideoPlayer</string>
    <string name="loading">正在加载中...</string>


    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="N_A">N/A</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>
</resources>
