<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_400dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_200dp"
            android:src="@drawable/ic_launcher"
            app:civ_border_color="@color/white"
            app:civ_border_overlay="true"
            app:civ_border_width="@dimen/dimen_2sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10sp"
            android:text="@string/version_number"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_32sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_introduce_help"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/dimen_40sp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen_20dp"
        app:cardElevation="@dimen/dimen_20dp"
        >

        <TextView
            android:id="@+id/id_tv_app_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/app_description"
            android:textColor="@color/text_color"
            android:textSize="@dimen/dimen_24sp"/>

    </android.support.v7.widget.CardView>


</LinearLayout>